--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "doctrine/dbal": "^3.0",
+        "fzaninotto/faker": "^1.9.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
@@ -19,6 +20,7 @@
         "multicaret/laravel-acquaintances": "^3.4"
     },
     "require-dev": {
+        "fzaninotto/faker": "^1.9.1",
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
